# pushkind-nadin

./: .gitignore  .pre-commit-config.yaml  .secrets.yaml  LICENSE  Makefile  README.md  docker-compose.yaml  icu.c  pyproject.toml  run.py  settings.yaml
.github/workflows/: deploy_dev.yml  deploy_prod.yml  pytest.yml
nadin/: __init__.py  email.py  extensions.py  jinja_filters.py  models.py  oauth2.py  products.py  search.py  utils.py
nadin/admin/: __init__.py  forms.py  routes.py
nadin/api/: __init__.py  auth.py  forms.py  routes.py
nadin/auth/: __init__.py  email.py  forms.py  routes.py
nadin/main/: __init__.py  forms.py  routes.py  routes_approve.py  routes_dashboard.py  routes_help.py  routes_history.py  routes_index.py  routes_limits.py  routes_products.py  routes_projects.py  routes_settings.py  routes_shop.py  routes_stores.py  routes_vendors.py  utils.py
nadin/models/: hub.py  oauth.py  order.py  product.py  project.py  search.py  shopping_cart.py
nadin/oauth/: __init__.py  routes.py  server.py  yandex.py
nadin/templates/: _limit.html  _order.html  _order.status.html  _order.status.line.html  _pagination.html  _product.html  _store.html  _user.html  _user.popover.html  _user.settings.form.html  _vendor.html  admin.html  approve.html  base.html  dashboard.html  help.html  history.html  index.html  limits.html  navigation.html  products.html  projects.html  settings.html  shop_cart.html  shop_categories.html  shop_products.html  stores.html  support.html  vendors.html
tests/: conftest.py  test_flask_dynaconf.py
tests/models/: test_hub.py  (+2 more)
(+75 files in other folders)
